# chrome-devtools-cli

./: AGENTS.md  Cargo.toml  Makefile  README.md  test_args.rs  test_err.rs  test_nav.html  test_nav2.html
Formula/: chrome-devtools.rb
skill/chrome-devtools/: CUSTOM_SCRIPTING.md  SKILL.md
skill/chrome-devtools/examples/: deepwiki_adapter.js  hn_adapter.js  search_deepwiki.js  search_hn.js
src/: browser.rs  cdp.rs  client.rs  constants.rs  daemon.rs  error.rs  format.rs  lib.rs  main.rs  protocol.rs  result.rs  telemetry.rs
src/commands/: console.rs  emulation.rs  evaluate.rs  executor.rs  input.rs  memory.rs  mod.rs  navigate.rs  network.rs  pages.rs  read_page.rs  screencast.rs  screenshot.rs  snapshot.rs  sw_logs.rs  third_party.rs
tests/: error_tests.rs  executor_tests.rs  result_tests.rs  telemetry_tests.rs
wiki/: adapter.md  read-page.md  run-script.md
