[package]
name = "chrome-devtools-cli"
version = "1.3.0"
edition = "2021"
description = "Chrome DevTools Protocol CLI — auto-connects to existing Chrome"
authors = ["Aero <aero.windwalker@gmail.com>"]
license = "MIT"
repository = "https://github.com/aeroxy/chrome-devtools-cli"

[[bin]]
name = "chrome-devtools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4.44"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
futures-util = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toon-format = "0.5"
tokio-tungstenite = "0.24"
htmd = "0.5.4"
dom_smoothie = "0.18.0"
html-escape = "0.2.13"

[dev-dependencies]
tempfile = "3"
